Adds wrapper, build.gradle and settings.gradle for parent.

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@
 .project
 release.properties
 project.properties
+local.properties
 **/project.properties
 target
 out
 .idea
 *.iml
 classes
+*.*~
