--- a/core/build.gradle
+++ b/core/build.gradle
@@ -68,7 +68,7 @@ artifacts {
 dependencies {
     provided 'com.google.android:android:2.3.3'
     testCompile 'junit:junit:4.11'
-    testCompile 'org.robolectric:robolectric:1.0-RC1'
+    testCompile 'com.pivotallabs:robolectric:1.0-RC1'
     compile 'org.mockito:mockito-core:1.9.5'
     testCompile 'commons-io:commons-io:2.4'
     // instrumentTestCompile 'org.mockito:mockito-core:1.9.5'
