Removes deprecated method of adding vars

--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,11 @@
 // build.gradle for imageloader parent
 def teamDir = new File(buildscript.sourceFile.parentFile, 'team-props')
-ext {
-    checkstyleConfigDir = "$teamDir"
-    scmBranch = "master"
-    junitVersion="4.11"
-    projectBuildSourceEncoding="UTF-8"
-    androidVersion="2.3.3"
-    androidSdkPlatform="10"
-}
-
-
+project.ext.set("checkstyleConfigDir", "$teamDir")
+project.ext.set("scmBranch", "master")
+project.ext.set("junitVersion", "4.11")
+project.ext.set("projectBuildSourceEncoding", "UTF-8")
+project.ext.set("androidVersion", "2.3.3")
+project.ext.set("androidSdkPlatform", "10")
 
 subprojects {
     apply plugin: 'checkstyle'
@@ -19,11 +15,10 @@ subprojects {
         configProperties.checkstyleConfigDir = checkstyleConfigDir
     }
 
-    // TODO: @Frankie is there a reason this should be commented out
-    /*apply plugin: 'findbugs'
+    apply plugin: 'findbugs'
     findbugs {
         ignoreFailures = true
-    }*/
+    }
 
     apply plugin: 'pmd'
     pmd {
